--- a/src/main/java/axoloti/dialogs/AxolotiLibraryEditor.form
+++ b/src/main/java/axoloti/dialogs/AxolotiLibraryEditor.form
@@ -57,14 +57,15 @@
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="jRemotePath" min="-2" pref="394" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" alignment="0" attributes="0">
+                              <Group type="102" attributes="0">
                                   <Component id="jPassword" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="32767" attributes="0"/>
                                   <Component id="jInitRepo" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" attributes="0">
                                   <Component id="jUserId" max="32767" attributes="0"/>
-                                  <EmptySpace min="-2" pref="244" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="138" max="-2" attributes="0"/>
+                                  <Component id="jAutoSync" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -113,6 +114,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jUserId" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jAutoSync" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -251,6 +253,11 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jInitRepoActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JCheckBox" name="jAutoSync">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Auto Sync"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
