--- a/src/main/java/axoloti/dialogs/PreferencesFrame.form
+++ b/src/main/java/axoloti/dialogs/PreferencesFrame.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.5" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.6" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
@@ -62,8 +62,6 @@
                       <Component id="jScrollPane2" min="-2" pref="674" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jEditLib" min="-2" max="-2" attributes="0"/>
-                          <Component id="jResetLib" min="-2" pref="68" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="jAddLibBtn" min="-2" pref="44" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
@@ -72,6 +70,10 @@
                           <Component id="btnRuntimeDir" alignment="0" min="-2" pref="76" max="-2" attributes="0"/>
                           <Component id="btnFirmwareDir" alignment="0" min="-2" pref="76" max="-2" attributes="0"/>
                           <Component id="btnFavDir" alignment="0" min="-2" pref="76" max="-2" attributes="0"/>
+                          <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                              <Component id="jEditLib" alignment="0" pref="0" max="32767" attributes="0"/>
+                              <Component id="jResetLib" min="-2" pref="68" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace pref="21" max="32767" attributes="0"/>
                   </Group>
@@ -291,9 +293,10 @@
                 <Column editable="false" title="Type" type="java.lang.String"/>
                 <Column editable="false" title="Name" type="java.lang.String"/>
                 <Column editable="false" title="Location" type="java.lang.String"/>
-                <Column editable="true" title="Enabled" type="java.lang.Boolean"/>
+                <Column editable="false" title="Enabled" type="java.lang.Boolean"/>
               </Table>
             </Property>
+            <Property name="cellSelectionEnabled" type="boolean" value="false"/>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="1">
                 <Column maxWidth="-1" minWidth="-1" prefWidth="20" resizable="false">
@@ -318,7 +321,9 @@
                 </Column>
               </TableColumnModel>
             </Property>
-            <Property name="columnSelectionAllowed" type="boolean" value="true"/>
+            <Property name="selectionModel" type="javax.swing.ListSelectionModel" editor="org.netbeans.modules.form.editors2.JTableSelectionModelEditor">
+              <JTableSelectionModel selectionMode="0"/>
+            </Property>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
